<resources>
    <string name="app_name">SatelliteInfo</string>
    <string name="home_fragment_title">Home Fragment</string>
    <string name="can_not_get_satellite_list">Can not get satellite list</string>
    <string name="error">Error</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>
    <string name="retry">Retry</string>
    <string name="search">Search</string>
    <string name="detail_fragment_title">Detail Fragment</string>
    <string name="height_mass">Height/Mass: </string>
    <string name="costs">Costs: </string>
    <string name="last_position">Last Position: </string>
    <string name="empty"></string>
    <string name="can_not_get_satellite_detail">Satellite details can not received</string>
</resources>